--- a/app/src/main/res/layout/fragment_diary.xml
+++ b/app/src/main/res/layout/fragment_diary.xml
@@ -20,12 +20,43 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recycler_view"
+            <Button
+                android:id="@+id/button"
+                style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="50dp"
+                android:background="@android:color/transparent"
+                android:drawableRight="@drawable/add_lesson_image"
+                android:text="@string/add_lesson_text"
+                android:textAlignment="textStart"
+                android:textAllCaps="false"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
+
+            <View
+                android:id="@+id/divider2"
+                android:layout_width="match_parent"
+                android:layout_height="3dp"
+                android:background="@color/lessons_cards_gray"
+                app:layout_constraintBottom_toTopOf="@+id/button"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <com.google.android.material.tabs.TabLayout
+                android:id="@+id/tab_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:ignore="MissingConstraints" />
+
+            <androidx.viewpager.widget.ViewPager
+                android:id="@+id/viewPager"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_marginBottom="3dp"
+                android:background="@android:color/transparent"
+                app:layout_constraintBottom_toBottomOf="@id/divider2"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tab_layout" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -323,7 +354,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginTop="16dp"
-                android:src="@drawable/add_image"
+                app:srcCompat="@drawable/add_image"
                 app:layout_constraintStart_toEndOf="@+id/attachments_textview"
                 app:layout_constraintTop_toBottomOf="@+id/lesson_teacher_edittext" />
 
@@ -334,7 +365,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginTop="16dp"
-                android:src="@drawable/delete_image"
+                app:srcCompat="@drawable/delete_image"
                 app:layout_constraintStart_toEndOf="@+id/add_attachment_imageview"
                 app:layout_constraintTop_toBottomOf="@+id/lesson_teacher_edittext" />
 
@@ -395,7 +426,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginTop="16dp"
-                android:src="@drawable/add_image"
+                app:srcCompat="@drawable/add_image"
                 app:layout_constraintStart_toEndOf="@+id/rating_textview"
                 app:layout_constraintTop_toBottomOf="@+id/attachments_scroll" />
 
@@ -406,7 +437,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginTop="16dp"
-                android:src="@drawable/delete_image"
+                app:srcCompat="@drawable/delete_image"
                 app:layout_constraintStart_toEndOf="@+id/add_rate_imageview"
                 app:layout_constraintTop_toBottomOf="@+id/attachments_scroll" />
 
