I added ability of deleting lesson's cards (+ Some bugs have been fixed)

--- a/app/src/main/res/layout/fragment_diary.xml
+++ b/app/src/main/res/layout/fragment_diary.xml
@@ -45,6 +45,7 @@
                 android:id="@+id/tab_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                app:tabIndicatorColor="@color/colorOrange"
                 tools:ignore="MissingConstraints" />
 
             <androidx.viewpager.widget.ViewPager
