--- a/app/src/main/res/layout/activity_diary.xml
+++ b/app/src/main/res/layout/activity_diary.xml
@@ -46,10 +46,16 @@
 
             <com.google.android.material.tabs.TabLayout
                 android:id="@+id/tab_layout"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
                 android:visibility="visible"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:tabGravity="center"
                 app:tabIndicatorColor="@color/colorOrange"
+                app:tabMode="scrollable"
                 tools:ignore="MissingConstraints" />
 
             <androidx.viewpager.widget.ViewPager
@@ -135,7 +141,7 @@
             android:layout_marginBottom="102dp"
             android:background="@drawable/white_border"
             android:clickable="false"
-            android:visibility="visible"
+            android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="@+id/old_user_layout"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -147,7 +153,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="58dp"
                 android:layout_marginEnd="16dp"
-                android:layout_marginRight="16dp"
+                android:backgroundTint="@color/colorOrange"
                 android:ems="10"
                 android:hint="@string/number_lesson_text"
                 android:inputType="number"
@@ -170,8 +176,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:layout_marginLeft="16dp"
                 android:layout_marginTop="16dp"
+                android:backgroundTint="@color/colorOrange"
                 android:ems="10"
                 android:hint="@string/lessons_name_text"
                 android:inputType="textPersonName"
@@ -329,8 +335,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:layout_marginLeft="16dp"
                 android:layout_marginTop="16dp"
+                android:backgroundTint="@color/colorOrange"
                 android:ems="10"
                 android:hint="@string/insert_teachers_name_text"
                 android:inputType="textPersonName"
@@ -451,6 +457,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginBottom="16dp"
+                android:backgroundTint="@color/colorOrange"
                 android:ems="10"
                 android:hint="@string/homework_text"
                 android:inputType="text"
