--- a/app/src/main/res/layout/activity_diary.xml
+++ b/app/src/main/res/layout/activity_diary.xml
@@ -15,7 +15,7 @@
             android:id="@+id/new_user_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:visibility="visible"
+            android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -140,7 +140,7 @@
             android:layout_marginBottom="102dp"
             android:background="@drawable/white_border"
             android:clickable="false"
-            android:visibility="invisible"
+            android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="@+id/old_user_layout"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -163,11 +163,12 @@
                 android:id="@+id/add_lesson_button"
                 android:layout_width="121dp"
                 android:layout_height="59dp"
+                android:layout_marginStart="13dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
-                android:layout_marginRight="16dp"
                 android:text="@string/add_lesson_text"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/lesson_teacher_edittext"
                 app:layout_constraintTop_toBottomOf="@+id/order_lesson_editText" />
 
             <EditText
@@ -316,10 +317,9 @@
 
             <TextView
                 android:id="@+id/lesson_time_edittext"
-                android:layout_width="200dp"
+                android:layout_width="225dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:layout_marginLeft="16dp"
                 android:layout_marginTop="16dp"
                 android:ems="10"
                 android:inputType="time"
