--- a/app/src/main/res/layout/fragment_today.xml
+++ b/app/src/main/res/layout/fragment_today.xml
@@ -31,7 +31,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginBottom="8dp"
-            android:text="@string/tuesday_text"
+            android:text="@string/monday_text"
             android:textAlignment="textStart"
             android:textSize="18sp"
             android:textStyle="bold"
