--- a/app/src/main/res/layout/activity_enter.xml
+++ b/app/src/main/res/layout/activity_enter.xml
@@ -8,9 +8,9 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/diary_layout"
-        android:layout_width="415dp"
+        android:layout_width="0dp"
         android:layout_height="400dp"
-        android:background="@drawable/diary_rectangle"
+        android:background="@color/color_orange_background"
         app:layout_constraintBottom_toTopOf="@+id/notes_layout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -63,9 +63,9 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/notes_layout"
-        android:layout_width="415dp"
+        android:layout_width="match_parent"
         android:layout_height="400dp"
-        android:background="@drawable/notes_rectangle"
+        android:background="@color/color_blue_background"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
