--- a/app/src/main/res/layout/activity_diary.xml
+++ b/app/src/main/res/layout/activity_diary.xml
@@ -179,7 +179,7 @@
 
             <EditText
                 android:id="@+id/lesson_name_edittext"
-                android:layout_width="wrap_content"
+                android:layout_width="210dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
@@ -187,6 +187,7 @@
                 android:ems="10"
                 android:hint="@string/lessons_name_text"
                 android:inputType="textPersonName"
+                android:maxWidth="210dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
