--- a/app/src/main/res/layout/note_item_layout.xml
+++ b/app/src/main/res/layout/note_item_layout.xml
@@ -31,20 +31,23 @@
             android:id="@+id/headline_note_item"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="3dp"
+            android:layout_margin="5dp"
+            android:singleLine="false"
             android:text="@string/notes_heading_text"
             android:textSize="24sp"
-            android:textStyle="bold"
-            android:singleLine="false"/>
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/maintext_note_item"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="3dp"
+            android:layout_marginStart="3dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginEnd="5dp"
+            android:singleLine="false"
             android:text="@string/notes_maintext_text"
-            android:textSize="18sp"
-            android:singleLine="false"/>
+            android:textSize="18sp" />
 
     </LinearLayout>
 
