Settings window was added

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,6 +16,8 @@
     <color name="colorBlue">#8bdbff</color>
     <color name="colorPink">#ffb4e0</color>
     <color name="colorViolet">#c7a4ff</color>
+    <!--Цвет для SettingsTheme-->
+    <color name="colorGray">#646464</color>
     <!--Цвет для затемнения заднего layout'а-->
     <color name="colorBackgroundGray">#91404040</color>
 </resources>
