--- a/app/src/main/res/layout/activity_enter.xml
+++ b/app/src/main/res/layout/activity_enter.xml
@@ -59,6 +59,16 @@
             app:layout_constraintStart_toStartOf="parent"
             app:srcCompat="@drawable/diary_open_button" />
 
+        <ImageView
+            android:id="@+id/settings_image"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="24dp"
+            app:layout_constraintBottom_toTopOf="@+id/diary_textview"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:srcCompat="@drawable/settings_image" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
